WIP on added blanks

--- a/Maker_Time_Series/PART_2_maker_time_series_presentation.ipynb
+++ b/Maker_Time_Series/PART_2_maker_time_series_presentation.ipynb
@@ -190,7 +190,7 @@
    },
    "outputs": [],
    "source": [
-    "raw_data.\"CODE HERE\""
+    "raw_data.\"CODE HERE\"().\"CODE HERE\"()"
    ]
   },
   {
@@ -479,7 +479,7 @@
    },
    "outputs": [],
    "source": [
-    "ts_to_resample_min = ts_to_resample['values'].resample('T').ffill()\n",
+    "ts_to_resample_min = ts_to_resample['values'].\"CODE HERE\"('T').\"CODE HERE\"()\n",
     "\n",
     "plt.figure(figsize=(15, 5))\n",
     "\n",
@@ -512,7 +512,7 @@
    },
    "outputs": [],
    "source": [
-    "ts_to_resample_min = ts_to_resample['values'].resample('T').interpolate(method='linear')\n",
+    "ts_to_resample_min = ts_to_resample['values'].\"CODE HERE\"('T').interpolate(method=\"CODE HERE\")\n",
     "\n",
     "plt.figure(figsize=(15, 5))\n",
     "\n",
@@ -723,7 +723,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.10"
   },
   "toc": {
    "base_numbering": 1,
