--- a/Maker_Time_Series/PART_3_maker_time_series_presentation.ipynb
+++ b/Maker_Time_Series/PART_3_maker_time_series_presentation.ipynb
@@ -588,7 +588,7 @@
     }
    },
    "source": [
-    "We can lot the forecast by calling the `Prophet.plot` method and passing in our forecast DataFrame."
+    "We can plot the forecast by calling the `Prophet.plot` method and passing in our forecast DataFrame."
    ]
   },
   {
@@ -656,7 +656,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.10"
   },
   "toc": {
    "base_numbering": 1,
